# stm32f103_naive_stuff

./: Cargo.toml  Makefile  README.md
.cargo/: config
lcd1602a/: Cargo.toml
lcd1602a/src/: lib.rs
naive_stuff/: Cargo.toml
naive_stuff/src/: main.rs
