[package]
name = "naive_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
nb = "1.1.0"
embedded-hal = "1.0.0"
lcd1602a = {path = "../lcd1602a"}

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "rt"]

[[bin]]
name = "naive_stuff"
test = false
bench = false

#[profile.release]
#codegen-units = 1
#debug = true
#lto = true
